<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuHome"
        android:icon="@drawable/ic_home"
        android:title="@string/home_menu" />
    <item
        android:id="@+id/menuUpcoming"
        android:icon="@drawable/ic_event"
        android:title="@string/upcoming_menu" />
    <item
        android:id="@+id/menuFinished"
        android:icon="@drawable/ic_event_finished"
        android:title="@string/finished_menu" />
    <item
        android:id="@+id/menuSearch"
        android:icon="@drawable/ic_search"
        android:title="@string/search_menu" />
    <item
        android:id="@+id/menuSetting"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting_menu" />
</menu>
