<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.features.settings.SettingFragment">

    <!-- Dark Mode Label -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDarkModeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/theme_setting_title"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <!-- Dark Mode Description -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDarkModeDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/theme_settting_desc"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:textColor="?attr/colorOnSurfaceVariant"
        app:layout_constraintEnd_toStartOf="@id/switchDarkMode"
        app:layout_constraintStart_toStartOf="@id/tvDarkModeTitle"
        app:layout_constraintTop_toBottomOf="@id/tvDarkModeTitle"
        tools:ignore="HardcodedText" />

    <!-- Dark Mode Switch -->
    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchDarkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvDarkModeTitle" />


    <!-- Notification Label -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvNotificationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/notifications_title"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDarkModeDesc"
        tools:ignore="HardcodedText" />

    <!-- Notification Description -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvNotificationDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/notifications_desc"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:textColor="?attr/colorOnSurfaceVariant"
        app:layout_constraintEnd_toStartOf="@id/switchNotification"
        app:layout_constraintStart_toStartOf="@id/tvNotificationTitle"
        app:layout_constraintTop_toBottomOf="@id/tvNotificationTitle"
        tools:ignore="HardcodedText" />

    <!-- Notification Switch -->
    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvNotificationTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>
