<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingHorizontal="16dp"
    android:paddingTop="16dp"
    tools:context=".view.features.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:text="@string/dicoding_event_title"
            android:textAppearance="?attr/textAppearanceHeadlineMedium"
            android:textColor="?attr/colorOnBackground"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvUpcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/upcoming_events"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <FrameLayout
            android:id="@+id/loadingUpcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvUpcoming">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progressCircular"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                app:indicatorColor="@color/md_theme_light_primary"
                app:trackColor="@color/md_theme_light_secondary"
                app:trackThickness="3dp" />
        </FrameLayout>

        <com.halimjr11.eventora.ui.components.ErrorView
            android:id="@+id/evUpcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/loadingUpcoming" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvUpcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/evUpcoming"
            tools:listitem="@layout/item_upcoming_event" />

        <TextView
            android:id="@+id/tvFinished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:text="@string/finished_events"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvUpcoming" />

        <FrameLayout
            android:id="@+id/loadingFinished"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFinished">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progressFinished"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                app:indicatorColor="@color/md_theme_light_primary"
                app:trackColor="@color/md_theme_light_secondary"
                app:trackThickness="3dp" />
        </FrameLayout>

        <com.halimjr11.eventora.ui.components.ErrorView
            android:id="@+id/evFinished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/loadingFinished" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFinished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/evFinished"
            tools:listitem="@layout/item_finished_event" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
